--- a/scoreKeeper.css
+++ b/scoreKeeper.css
@@ -1,3 +1,129 @@
+/* My normalize rules */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+.container {
+  text-align: center;
+}
+
+.scoreboard {
+  margin-top: 1em;
+  font-size: 4em;
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+}
+
+.scoreboard span {
+  margin: 0 0.5em 0 0.5em;
+}
+
+.score {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  line-height: 1.5em;
+  border-radius: .2em;
+  background: lightgrey;
+  font-size: 1.5em;
+}
+
+.score:hover {
+  cursor: pointer;
+}
+
+.playTo {
+  padding: 1em;
+  font-size: 2em;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.arrows {
+  display: inline-block;
+}
+
+.arrows i {
+  display: block;
+  background-color: lightcyan;
+  border: .01em solid lightgrey;
+  border-radius: .2em;
+  width: 1.5em;
+  line-height: .8em;
+}
+
+#scoreField {
+  text-align: center;
+  font-size: 2em;
+  width: 2em;
+  height: 2em;
+}
+
+/*
+#resetButton {
+  font-size: 2em;
+
+  background-color: dimgray;
+  border: none;
+  text-decoration: none;
+}
+*/
+
+
+.customButton {
+  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  box-shadow:inset 0px 1px 0px 0px #ffffff;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+  background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+  background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+  background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+  background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+  background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
+  background-color:#ededed;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+  border-radius:6px;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  cursor:pointer;
+  color:#777777;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #ffffff;
+}
+.customButton:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+  background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+  background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+  background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+  background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+  background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
+  background-color:#dfdfdf;
+}
+.customButton:active {
+  position:relative;
+  top:1px;
+}
+
 .winner {
-	color: chartreuse;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-radial-gradient(circle, red, yellow, blue); /* Safari */
+  background: -o-radial-gradient(circle, red, yellow, blue); /* Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(circle, red, yellow, blue); /* Firefox 3.6 to 15 */
+  background: radial-gradient(circle, red, yellow, blue); /* Standard syntax */
 }
