--- a/scoreKeeper.css
+++ b/scoreKeeper.css
@@ -9,18 +9,19 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
 }
+
+:focus {outline:none;}
 
 .container {
   text-align: center;
 }
 
 .scoreboard {
-  margin-top: 1em;
   font-size: 4em;
-  -webkit-user-select: none; /* Chrome/Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
 }
 
 .scoreboard span {
@@ -52,31 +53,17 @@ body {
   display: inline-block;
 }
 
-.arrows i {
+.arrows button {
   display: block;
-  background-color: lightcyan;
-  border: .01em solid lightgrey;
-  border-radius: .2em;
-  width: 1.5em;
-  line-height: .8em;
+  font-size: .7em;
 }
 
-#scoreField {
+#goalField {
   text-align: center;
   font-size: 2em;
   width: 2em;
   height: 2em;
 }
-
-/*
-#resetButton {
-  font-size: 2em;
-
-  background-color: dimgray;
-  border: none;
-  text-decoration: none;
-}
-*/
 
 
 .customButton {
@@ -94,13 +81,12 @@ body {
   -moz-border-radius:6px;
   -webkit-border-radius:6px;
   border-radius:6px;
-  border:1px solid #dcdcdc;
+  border:none;
   display:inline-block;
   cursor:pointer;
   color:#777777;
   font-family:Arial;
   font-size:15px;
-  font-weight:bold;
   padding:6px 24px;
   text-decoration:none;
   text-shadow:0px 1px 0px #ffffff;
@@ -118,6 +104,13 @@ body {
 .customButton:active {
   position:relative;
   top:1px;
+}
+.customButton:disabled {
+  background: black;
+}
+
+#resetButton {
+  font-size: 2em;
 }
 
 .winner {
